After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690613 - grilo: Downgrade init failure to a debug statement
grilo: Downgrade init failure to a debug statement
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-21 14:25 UTC by Bastien Nocera
Modified: 2013-01-04 10:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
grilo: Downgrade init failure to a debug statement (1.20 KB, patch)
2012-12-21 14:25 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-12-21 14:25:53 UTC
.
Comment 1 Bastien Nocera 2012-12-21 14:25:55 UTC
Created attachment 232063 [details] [review]
grilo: Downgrade init failure to a debug statement

It's quite common for plugin load to fail when it lacks the
necessary API keys, especially when the plugin type isn't
supported by the application.

Eg. we don't want Totem to warn if it cannot load the Flickr
plugin that it will not be using.
Comment 2 Juan A. Suarez Romero 2013-01-04 10:06:15 UTC
I've slightly changed the debug message.


Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Dec 21 14:49:47 2012 +0100

    core: Downgrade init failure to a debug statement
    
    It's quite common for plugin load to fail when it lacks the
    necessary API keys, especially when the plugin type isn't
    supported by the application.
    
    Eg. we don't want Totem to warn if it cannot load the Flickr
    plugin that it will not be using.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=690613
    
    Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

 src/grl-registry.c |    2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)