core: Downgrade init failure to a debug statement

It's quite common for plugin load to fail when it lacks the
necessary API keys, especially when the plugin type isn't
supported by the application.

Eg. we don't want Totem to warn if it cannot load the Flickr
plugin that it will not be using.

https://bugzilla.gnome.org/show_bug.cgi?id=690613

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>